use SolrCache.setState(LIVE) to reset new cache stats before use